src/main/antlr4/.antlr/JavanaParser.java
// Generated from c:/Users/yyb20/Downloads/YUCompSci/Baker_Yaakov_800615623/Javana/src/main/antlr4/Javana.g4 by ANTLR 4.13.1

package antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavanaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, INT_ARR_TYPE=33, BOOL_ARR_TYPE=34, STR_ARR_TYPE=35, REC_ARR_TYPE=36, 
		INT_TYPE=37, BOOL_TYPE=38, STR_TYPE=39, HIGHER_ARITH_OP=40, ARITH_OP=41, 
		REL_OP=42, EQ_OP=43, COND_OP=44, IDENT=45, STRING=46, INTEGER=47, BOOL=48, 
		NULL_VALUE=49, NEWLINE=50, WS=51, COMMENT=52, LINE_COMMENT=53;
	public static final int
		RULE_program = 0, RULE_programHeader = 1, RULE_mainMethod = 2, RULE_mainArg = 3, 
		RULE_globalDefinitions = 4, RULE_funcDefinition = 5, RULE_funcPrototype = 6, 
		RULE_funcArgList = 7, RULE_funcArgument = 8, RULE_returnType = 9, RULE_recordDecl = 10, 
		RULE_variableDecl = 11, RULE_typeAssoc = 12, RULE_variableDef = 13, RULE_constantDef = 14, 
		RULE_nameList = 15, RULE_statement = 16, RULE_blockStatement = 17, RULE_nameDeclStatement = 18, 
		RULE_nameDeclDefStatement = 19, RULE_assignmentStatement = 20, RULE_identModifier = 21, 
		RULE_arrIdxSpecifier = 22, RULE_ifStatement = 23, RULE_forStatement = 24, 
		RULE_whileStatement = 25, RULE_expressionStatement = 26, RULE_returnStatement = 27, 
		RULE_printStatement = 28, RULE_printLineStatement = 29, RULE_printArgument = 30, 
		RULE_expression = 31, RULE_exprList = 32, RULE_readCharCall = 33, RULE_readLineCall = 34, 
		RULE_functionCall = 35, RULE_newArray = 36, RULE_newRecord = 37, RULE_varInitList = 38, 
		RULE_literal = 39, RULE_type = 40, RULE_scalarType = 41, RULE_compositeType = 42, 
		RULE_integerType = 43, RULE_booleanType = 44, RULE_stringType = 45, RULE_recordType = 46, 
		RULE_integerArrType = 47, RULE_booleanArrType = 48, RULE_stringArrType = 49, 
		RULE_recordArrType = 50, RULE_identifier = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeader", "mainMethod", "mainArg", "globalDefinitions", 
			"funcDefinition", "funcPrototype", "funcArgList", "funcArgument", "returnType", 
			"recordDecl", "variableDecl", "typeAssoc", "variableDef", "constantDef", 
			"nameList", "statement", "blockStatement", "nameDeclStatement", "nameDeclDefStatement", 
			"assignmentStatement", "identModifier", "arrIdxSpecifier", "ifStatement", 
			"forStatement", "whileStatement", "expressionStatement", "returnStatement", 
			"printStatement", "printLineStatement", "printArgument", "expression", 
			"exprList", "readCharCall", "readLineCall", "functionCall", "newArray", 
			"newRecord", "varInitList", "literal", "type", "scalarType", "compositeType", 
			"integerType", "booleanType", "stringType", "recordType", "integerArrType", 
			"booleanArrType", "stringArrType", "recordArrType", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Javana'", "':'", "'@main'", "'('", "')'", "'func'", "'->'", "','", 
			"'record'", "'{'", "'}'", "'decl'", "'var'", "'='", "'const'", "'.'", 
			"'['", "']'", "'if'", "'else'", "'for'", "';'", "'while'", "'return'", 
			"'print'", "'println'", "'length'", "'!'", "'-'", "'readch'", "'readln'", 
			"'@'", null, null, null, null, "'int'", "'bool'", "'string'", null, null, 
			null, null, null, null, null, null, null, "'None'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "INT_ARR_TYPE", 
			"BOOL_ARR_TYPE", "STR_ARR_TYPE", "REC_ARR_TYPE", "INT_TYPE", "BOOL_TYPE", 
			"STR_TYPE", "HIGHER_ARITH_OP", "ARITH_OP", "REL_OP", "EQ_OP", "COND_OP", 
			"IDENT", "STRING", "INTEGER", "BOOL", "NULL_VALUE", "NEWLINE", "WS", 
			"COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Javana.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavanaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeaderContext programHeader() {
			return getRuleContext(ProgramHeaderContext.class,0);
		}
		public MainMethodContext mainMethod() {
			return getRuleContext(MainMethodContext.class,0);
		}
		public List<GlobalDefinitionsContext> globalDefinitions() {
			return getRuleContexts(GlobalDefinitionsContext.class);
		}
		public GlobalDefinitionsContext globalDefinitions(int i) {
			return getRuleContext(GlobalDefinitionsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			programHeader();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 45632L) != 0)) {
				{
				{
				setState(105);
				globalDefinitions();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			mainMethod();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 45632L) != 0)) {
				{
				{
				setState(112);
				globalDefinitions();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeaderContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ProgramHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterProgramHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitProgramHeader(this);
		}
	}

	public final ProgramHeaderContext programHeader() throws RecognitionException {
		ProgramHeaderContext _localctx = new ProgramHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__0);
			setState(119);
			identifier();
			setState(120);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainMethodContext extends ParserRuleContext {
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public MainArgContext mainArg() {
			return getRuleContext(MainArgContext.class,0);
		}
		public MainMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterMainMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitMainMethod(this);
		}
	}

	public final MainMethodContext mainMethod() throws RecognitionException {
		MainMethodContext _localctx = new MainMethodContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__2);
			setState(123);
			match(T__3);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(124);
				mainArg();
				}
			}

			setState(127);
			match(T__4);
			setState(128);
			blockStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainArgContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StringArrTypeContext stringArrType() {
			return getRuleContext(StringArrTypeContext.class,0);
		}
		public MainArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterMainArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitMainArg(this);
		}
	}

	public final MainArgContext mainArg() throws RecognitionException {
		MainArgContext _localctx = new MainArgContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			identifier();
			setState(131);
			match(T__1);
			setState(132);
			stringArrType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDefinitionsContext extends ParserRuleContext {
		public NameDeclStatementContext nameDeclStatement() {
			return getRuleContext(NameDeclStatementContext.class,0);
		}
		public NameDeclDefStatementContext nameDeclDefStatement() {
			return getRuleContext(NameDeclDefStatementContext.class,0);
		}
		public GlobalDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterGlobalDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitGlobalDefinitions(this);
		}
	}

	public final GlobalDefinitionsContext globalDefinitions() throws RecognitionException {
		GlobalDefinitionsContext _localctx = new GlobalDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_globalDefinitions);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				nameDeclStatement();
				}
				break;
			case T__5:
			case T__12:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				nameDeclDefStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefinitionContext extends ParserRuleContext {
		public FuncPrototypeContext funcPrototype() {
			return getRuleContext(FuncPrototypeContext.class,0);
		}
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public FuncDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterFuncDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitFuncDefinition(this);
		}
	}

	public final FuncDefinitionContext funcDefinition() throws RecognitionException {
		FuncDefinitionContext _localctx = new FuncDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			funcPrototype();
			setState(139);
			blockStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncPrototypeContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public FuncArgListContext funcArgList() {
			return getRuleContext(FuncArgListContext.class,0);
		}
		public FuncPrototypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcPrototype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterFuncPrototype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitFuncPrototype(this);
		}
	}

	public final FuncPrototypeContext funcPrototype() throws RecognitionException {
		FuncPrototypeContext _localctx = new FuncPrototypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcPrototype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__5);
			setState(142);
			identifier();
			setState(143);
			match(T__3);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(144);
				funcArgList();
				}
			}

			setState(147);
			match(T__4);
			setState(148);
			match(T__6);
			setState(149);
			returnType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncArgListContext extends ParserRuleContext {
		public List<FuncArgumentContext> funcArgument() {
			return getRuleContexts(FuncArgumentContext.class);
		}
		public FuncArgumentContext funcArgument(int i) {
			return getRuleContext(FuncArgumentContext.class,i);
		}
		public FuncArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterFuncArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitFuncArgList(this);
		}
	}

	public final FuncArgListContext funcArgList() throws RecognitionException {
		FuncArgListContext _localctx = new FuncArgListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcArgList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			funcArgument();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(152);
				match(T__7);
				setState(153);
				funcArgument();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncArgumentContext extends ParserRuleContext {
		public TypeAssocContext typeAssoc() {
			return getRuleContext(TypeAssocContext.class,0);
		}
		public FuncArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterFuncArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitFuncArgument(this);
		}
	}

	public final FuncArgumentContext funcArgument() throws RecognitionException {
		FuncArgumentContext _localctx = new FuncArgumentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcArgument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			typeAssoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NULL_VALUE() { return getToken(JavanaParser.NULL_VALUE, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitReturnType(this);
		}
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_returnType);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_ARR_TYPE:
			case BOOL_ARR_TYPE:
			case STR_ARR_TYPE:
			case REC_ARR_TYPE:
			case INT_TYPE:
			case BOOL_TYPE:
			case STR_TYPE:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				type();
				}
				break;
			case NULL_VALUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(NULL_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordDeclContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<TypeAssocContext> typeAssoc() {
			return getRuleContexts(TypeAssocContext.class);
		}
		public TypeAssocContext typeAssoc(int i) {
			return getRuleContext(TypeAssocContext.class,i);
		}
		public RecordDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).enterRecordDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavanaListener ) ((JavanaListener)listener).exitRecordDecl(this);
		}
	}
